--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.3.1",
-    "nuxt": "^3.1.2"
+    "nuxt": "^3.1.2",
+    "nuxt-icon": "^0.2.10"
+  },
+  "dependencies": {
+    "@pinia/nuxt": "^0.4.6",
+    "pinia": "^2.0.30"
   }
 }
