--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.6",
-    "pinia": "^2.0.30"
+    "path": "^0.12.7",
+    "pinia": "^2.0.30",
+    "sass": "^1.58.0"
   }
 }
