--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.6",
+    "mitt": "^3.0.0",
     "path": "^0.12.7",
     "pinia": "^2.0.30",
     "sass": "^1.58.0"
