--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.6",
+    "@vueuse/core": "^10.1.2",
+    "@vueuse/nuxt": "^10.1.2",
     "mitt": "^3.0.0",
     "path": "^0.12.7",
     "pinia": "^2.0.30",
