--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "devDependencies": {
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.3.1",
-    "nuxt": "^3.1.2",
-    "nuxt-icon": "^0.2.10"
+    "nuxt": "^3.1.2"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.6",
